# isletscope

./: .gitignore  GIT_FIX_INSTRUCTIONS.md  INSTANSEG_FIX.md  QUICKSTART.md  README.md  SEGMENTATION_EXPLAINED.md  environment.cpu.yml  environment.yml  pyproject.toml  requirements.txt  run_jupyter.sh  test_instanseg.py
docs/source/: api.rst  conf.py  index.rst  tutorial.rst
isletscope/: __init__.py  islet_detection.py  nuclear_segmentation.py  radial_analysis.py  segmentation.py  spatial_inference.py  stain.py  tissue_classification.py
notebooks/: 00_train_instanseg.ipynb  01_stain_normalization.ipynb  02_segmentation.ipynb  03_islet_detection.ipynb  04_radial_analysis.ipynb  05_tissue_subclassification.ipynb  06_3D_inference.ipynb
